add fix lstm & rnn

--- a/Model/CNN.ipynb
+++ b/Model/CNN.ipynb
@@ -1480,7 +1480,7 @@
     "plt.plot(history.history['val_acc'], label='Validation Accuracy')\n",
     "plt.legend(loc='lower right')\n",
     "plt.ylabel('Accuracy')\n",
-    "model.save('../modelh5/model_cnn_tuning.h5')"
+    "# model.save('../modelh5/model_cnn_tuning.h5')"
    ]
   },
   {
