--- a/Model/CNN_Predict.ipynb
+++ b/Model/CNN_Predict.ipynb
@@ -9,14 +9,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-10 22:37:13.738086: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2023-10-10 22:37:13.779944: E tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:9342] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2023-10-10 22:37:13.780020: E tensorflow/compiler/xla/stream_executor/cuda/cuda_fft.cc:609] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2023-10-10 22:37:13.780070: E tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:1518] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2023-10-10 22:37:13.789646: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2023-10-10 22:37:13.790424: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2023-10-11 19:17:29.874985: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2023-10-11 19:17:29.913715: E tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:9342] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2023-10-11 19:17:29.913751: E tensorflow/compiler/xla/stream_executor/cuda/cuda_fft.cc:609] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2023-10-11 19:17:29.913775: E tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:1518] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2023-10-11 19:17:29.920239: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2023-10-11 19:17:29.920670: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-10-10 22:37:14.676534: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+      "2023-10-11 19:17:30.883235: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     }
    ],
@@ -42,25 +42,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential\"\n",
+      "Model: \"sequential_1\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " conv1d (Conv1D)             (None, 99, 64)            256       \n",
+      " conv1d_2 (Conv1D)           (None, 99, 64)            256       \n",
       "                                                                 \n",
-      " max_pooling1d (MaxPooling1  (None, 50, 64)            0         \n",
-      " D)                                                              \n",
-      "                                                                 \n",
-      " conv1d_1 (Conv1D)           (None, 48, 32)            6176      \n",
-      "                                                                 \n",
-      " max_pooling1d_1 (MaxPoolin  (None, 24, 32)            0         \n",
+      " max_pooling1d_2 (MaxPoolin  (None, 50, 64)            0         \n",
       " g1D)                                                            \n",
       "                                                                 \n",
-      " flatten (Flatten)           (None, 768)               0         \n",
+      " conv1d_3 (Conv1D)           (None, 48, 32)            6176      \n",
       "                                                                 \n",
-      " dense (Dense)               (None, 64)                49216     \n",
+      " max_pooling1d_3 (MaxPoolin  (None, 24, 32)            0         \n",
+      " g1D)                                                            \n",
       "                                                                 \n",
-      " dense_1 (Dense)             (None, 5)                 325       \n",
+      " flatten_1 (Flatten)         (None, 768)               0         \n",
+      "                                                                 \n",
+      " dense_2 (Dense)             (None, 64)                49216     \n",
+      "                                                                 \n",
+      " dense_3 (Dense)             (None, 5)                 325       \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 55973 (218.64 KB)\n",
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
