--- a/Model/CNN_Tuning.ipynb
+++ b/Model/CNN_Tuning.ipynb
@@ -12704,25 +12704,25 @@
     }
    ],
    "source": [
-    "import keras\n",
-    "from scikeras.wrappers import KerasClassifier\n",
-    "from sklearn.model_selection import GridSearchCV\n",
+    "# import keras\n",
+    "# from scikeras.wrappers import KerasClassifier\n",
+    "# from sklearn.model_selection import GridSearchCV\n",
     "\n",
-    "modeltuning=KerasClassifier(model=build_model,optimizer=\"adam\",\n",
-    "                                      loss=keras.losses.categorical_crossentropy,\n",
-    "                                      batch_size=8,\n",
-    "                                      epochs=100,\n",
-    "                                      verbose=1,\n",
-    "                                      metrics=['accuracy'],\n",
-    "                                      validation_split=0.1)\n",
+    "# modeltuning=KerasClassifier(model=build_model,optimizer=\"adam\",\n",
+    "#                                       loss=keras.losses.categorical_crossentropy,\n",
+    "#                                       batch_size=8,\n",
+    "#                                       epochs=100,\n",
+    "#                                       verbose=1,\n",
+    "#                                       metrics=['accuracy'],\n",
+    "#                                       validation_split=0.1)\n",
     "\n",
-    "params= {\n",
-    "        'batch_size': [16, 32, 64],\n",
-    "        'epochs':[10, 20, 30, 40, 50],\n",
-    "        }\n",
-    "gs=GridSearchCV(estimator=modeltuning, param_grid=params, cv=10, verbose=1, scoring='balanced_accuracy')\n",
-    "# now fit the dataset to the GridSearchCV object. \n",
-    "gs = gs.fit(X, y, validation_data=(X_test, y_test))"
+    "# params= {\n",
+    "#         'batch_size': [16, 32, 64],\n",
+    "#         'epochs':[10, 20, 30, 40, 50],\n",
+    "#         }\n",
+    "# gs=GridSearchCV(estimator=modeltuning, param_grid=params, cv=10, verbose=1, scoring='balanced_accuracy')\n",
+    "# # now fit the dataset to the GridSearchCV object. \n",
+    "# gs = gs.fit(X, y, validation_data=(X_test, y_test))"
    ]
   },
   {
