--- a/Model/CNN_KFold.ipynb
+++ b/Model/CNN_KFold.ipynb
@@ -658,13 +658,15 @@
     "    # Overall accuracy\n",
     "    ACC = (TP+TN)/(TP+FP+FN+TN)\n",
     "\n",
-    "    print(\"TNR : \", TNR)\n",
-    "    print(\"TPR : \", TPR)\n",
-    "    print(\"FPR : \", FPR)\n",
-    "    print(\"FNR : \", FNR)\n",
-    "    print(\"ACC : \", ACC)\n",
-    "    print(\"PPV : \", PPV)\n",
-    "    print(\"NPV : \", NPV)\n",
+    "    print(\"Sensitivity :\" , TPR, 'mean: ', np.mean(TPR))\n",
+    "    print(\"Specificity :\" , TNR, 'mean: ', np.mean(TNR))\n",
+    "    print(\"Precision :\" , PPV, 'mean: ', np.mean(PPV))\n",
+    "    print(\"Accuracy :\" , ACC, 'mean: ', np.mean(ACC))\n",
+    "    print(\"FPR :\" , FPR, 'mean: ', np.mean(FPR))\n",
+    "    print(\"FNR :\" , FNR, 'mean: ', np.mean(FNR))\n",
+    "    print(\"NPV :\" , NPV, 'mean: ', np.mean(NPV))\n",
+    "    print(\"FDR :\" , FDR, 'mean: ', np.mean(FDR))\n",
+    "    print(\"f1_score:\", 2 * (PPV * TPR) / (PPV + TPR), 'mean: ', np.mean(2 * (PPV * TPR) / (PPV + TPR)))\n",
     "\n",
     "        \n",
     "    no += 1\n",
@@ -1088,13 +1090,15 @@
     "    # Overall accuracy\n",
     "    ACC = (TP+TN)/(TP+FP+FN+TN)\n",
     "\n",
-    "    print(\"TNR : \", TNR)\n",
-    "    print(\"TPR : \", TPR)\n",
-    "    print(\"FPR : \", FPR)\n",
-    "    print(\"FNR : \", FNR)\n",
-    "    print(\"ACC : \", ACC)\n",
-    "    print(\"PPV : \", PPV)\n",
-    "    print(\"NPV : \", NPV)\n",
+    "    print(\"Sensitivity :\" , TPR, 'mean: ', np.mean(TPR))\n",
+    "    print(\"Specificity :\" , TNR, 'mean: ', np.mean(TNR))\n",
+    "    print(\"Precision :\" , PPV, 'mean: ', np.mean(PPV))\n",
+    "    print(\"Accuracy :\" , ACC, 'mean: ', np.mean(ACC))\n",
+    "    print(\"FPR :\" , FPR, 'mean: ', np.mean(FPR))\n",
+    "    print(\"FNR :\" , FNR, 'mean: ', np.mean(FNR))\n",
+    "    print(\"NPV :\" , NPV, 'mean: ', np.mean(NPV))\n",
+    "    print(\"FDR :\" , FDR, 'mean: ', np.mean(FDR))\n",
+    "    print(\"f1_score:\", 2 * (PPV * TPR) / (PPV + TPR), 'mean: ', np.mean(2 * (PPV * TPR) / (PPV + TPR)))\n",
     "\n",
     "        \n",
     "    no += 1\n",
