--- a/Model/RNN_Predict.ipynb
+++ b/Model/RNN_Predict.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -113,6 +113,8 @@
       "/home/rafli/anaconda3/envs/tf/lib/python3.11/site-packages/librosa/core/spectrum.py:257: UserWarning: n_fft=512 is too large for input signal of length=444\n",
       "  warnings.warn(\n",
       "/home/rafli/anaconda3/envs/tf/lib/python3.11/site-packages/librosa/core/spectrum.py:257: UserWarning: n_fft=512 is too large for input signal of length=504\n",
+      "  warnings.warn(\n",
+      "/home/rafli/anaconda3/envs/tf/lib/python3.11/site-packages/librosa/core/spectrum.py:257: UserWarning: n_fft=512 is too large for input signal of length=500\n",
       "  warnings.warn(\n"
      ]
     },
@@ -128,8 +130,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/rafli/anaconda3/envs/tf/lib/python3.11/site-packages/librosa/core/spectrum.py:257: UserWarning: n_fft=512 is too large for input signal of length=500\n",
-      "  warnings.warn(\n",
       "/home/rafli/anaconda3/envs/tf/lib/python3.11/site-packages/librosa/core/spectrum.py:257: UserWarning: n_fft=512 is too large for input signal of length=505\n",
       "  warnings.warn(\n",
       "/home/rafli/anaconda3/envs/tf/lib/python3.11/site-packages/librosa/core/spectrum.py:257: UserWarning: n_fft=512 is too large for input signal of length=367\n",
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
        "[5 rows x 114 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,14 +423,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4/4 [==============================] - 0s 7ms/step\n",
+      "4/4 [==============================] - 0s 5ms/step\n",
       "===\n",
       "[8.8353589e-04 1.2724470e-04 8.4679210e-05 9.9867320e-01 2.3131173e-04]\n",
       "Actual class: 3\n",
@@ -959,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -972,7 +972,7 @@
        "       [ 0,  0,  0,  0, 20]])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -984,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1006,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1036,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1066,33 +1066,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TNR : [1.     0.9875 0.9875 1.     1.    ]\n",
-      "TPR : [1.   0.95 0.95 1.   1.  ]\n",
-      "FPR : [0.     0.0125 0.0125 0.     0.    ]\n",
-      "FNR : [0.   0.05 0.05 0.   0.  ]\n",
-      "ACC : [1.   0.98 0.98 1.   1.  ]\n",
-      "PPV : [1.   0.95 0.95 1.   1.  ]\n",
-      "NPV : [1.     0.9875 0.9875 1.     1.    ]\n",
-      "FDR : [0.   0.05 0.05 0.   0.  ]\n"
+      "Sensitivity : [1.   0.95 0.95 1.   1.  ] mean:  0.9800000000000001\n",
+      "Specificity : [1.     0.9875 0.9875 1.     1.    ] mean:  0.9949999999999999\n",
+      "Precision : [1.   0.95 0.95 1.   1.  ] mean:  0.9800000000000001\n",
+      "Accuracy : [1.   0.98 0.98 1.   1.  ] mean:  0.992\n",
+      "FPR : [0.     0.0125 0.0125 0.     0.    ] mean:  0.005\n",
+      "FNR : [0.   0.05 0.05 0.   0.  ] mean:  0.02\n",
+      "NPV : [1.     0.9875 0.9875 1.     1.    ] mean:  0.9949999999999999\n",
+      "FDR : [0.   0.05 0.05 0.   0.  ] mean:  0.02\n",
+      "f1_score: [1.   0.95 0.95 1.   1.  ] mean:  0.9800000000000001\n"
      ]
     }
    ],
    "source": [
-    "print(\"TNR :\" , TNR)\n",
-    "print(\"TPR :\" , TPR)\n",
-    "print(\"FPR :\" , FPR)\n",
-    "print(\"FNR :\" , FNR)\n",
-    "print(\"ACC :\" , ACC)\n",
-    "print(\"PPV :\" , PPV)\n",
-    "print(\"NPV :\" , NPV)\n",
-    "print(\"FDR :\" , FDR)\n"
+    "print(\"Sensitivity :\" , TPR, 'mean: ', np.mean(TPR))\n",
+    "print(\"Specificity :\" , TNR, 'mean: ', np.mean(TNR))\n",
+    "print(\"Precision :\" , PPV, 'mean: ', np.mean(PPV))\n",
+    "print(\"Accuracy :\" , ACC, 'mean: ', np.mean(ACC))\n",
+    "print(\"FPR :\" , FPR, 'mean: ', np.mean(FPR))\n",
+    "print(\"FNR :\" , FNR, 'mean: ', np.mean(FNR))\n",
+    "print(\"NPV :\" , NPV, 'mean: ', np.mean(NPV))\n",
+    "print(\"FDR :\" , FDR, 'mean: ', np.mean(FDR))\n",
+    "print(\"f1_score:\", 2 * (PPV * TPR) / (PPV + TPR), 'mean: ', np.mean(2 * (PPV * TPR) / (PPV + TPR)))\n"
    ]
   }
  ],
