--- a/Model/RNN_Tuning_Predict.ipynb
+++ b/Model/RNN_Tuning_Predict.ipynb
@@ -9,14 +9,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-18 02:42:42.593492: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2023-10-18 02:42:42.660510: E tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:9342] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2023-10-18 02:42:42.660554: E tensorflow/compiler/xla/stream_executor/cuda/cuda_fft.cc:609] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2023-10-18 02:42:42.660592: E tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:1518] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2023-10-18 02:42:42.668888: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2023-10-18 02:42:42.669886: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2023-11-14 14:43:37.883322: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2023-11-14 14:43:37.923298: E tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:9342] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2023-11-14 14:43:37.923340: E tensorflow/compiler/xla/stream_executor/cuda/cuda_fft.cc:609] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2023-11-14 14:43:37.923364: E tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:1518] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2023-11-14 14:43:37.929713: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2023-11-14 14:43:37.930269: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-10-18 02:42:43.803268: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+      "2023-11-14 14:43:38.902649: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     }
    ],
@@ -128,6 +128,8 @@
       "/home/rafli/anaconda3/envs/tf/lib/python3.11/site-packages/librosa/core/spectrum.py:257: UserWarning: n_fft=512 is too large for input signal of length=444\n",
       "  warnings.warn(\n",
       "/home/rafli/anaconda3/envs/tf/lib/python3.11/site-packages/librosa/core/spectrum.py:257: UserWarning: n_fft=512 is too large for input signal of length=504\n",
+      "  warnings.warn(\n",
+      "/home/rafli/anaconda3/envs/tf/lib/python3.11/site-packages/librosa/core/spectrum.py:257: UserWarning: n_fft=512 is too large for input signal of length=500\n",
       "  warnings.warn(\n"
      ]
     },
@@ -143,8 +145,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/rafli/anaconda3/envs/tf/lib/python3.11/site-packages/librosa/core/spectrum.py:257: UserWarning: n_fft=512 is too large for input signal of length=500\n",
-      "  warnings.warn(\n",
       "/home/rafli/anaconda3/envs/tf/lib/python3.11/site-packages/librosa/core/spectrum.py:257: UserWarning: n_fft=512 is too large for input signal of length=505\n",
       "  warnings.warn(\n",
       "/home/rafli/anaconda3/envs/tf/lib/python3.11/site-packages/librosa/core/spectrum.py:257: UserWarning: n_fft=512 is too large for input signal of length=367\n",
@@ -445,7 +445,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4/4 [==============================] - 0s 7ms/step\n",
+      "4/4 [==============================] - 0s 6ms/step\n",
       "===\n",
       "[1.5504794e-04 1.2489346e-04 7.7341603e-05 9.9942505e-01 2.1768369e-04]\n",
       "Actual class: 3\n",
@@ -1086,26 +1086,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TNR : [0.9875 0.9875 0.9875 1.     1.    ]\n",
-      "TPR : [1.   0.95 0.95 0.95 1.  ]\n",
-      "FPR : [0.0125 0.0125 0.0125 0.     0.    ]\n",
-      "FNR : [0.   0.05 0.05 0.05 0.  ]\n",
-      "ACC : [0.99 0.98 0.98 0.99 1.  ]\n",
-      "PPV : [0.95238095 0.95       0.95       1.         1.        ]\n",
-      "NPV : [1.         0.9875     0.9875     0.98765432 1.        ]\n",
-      "FDR : [0.04761905 0.05       0.05       0.         0.        ]\n"
+      "Sensitivity : [1.   0.95 0.95 0.95 1.  ] mean:  0.97\n",
+      "Specificity : [0.9875 0.9875 0.9875 1.     1.    ] mean:  0.9925\n",
+      "Precision : [0.95238095 0.95       0.95       1.         1.        ] mean:  0.9704761904761904\n",
+      "Accuracy : [0.99 0.98 0.98 0.99 1.  ] mean:  0.9880000000000001\n",
+      "FPR : [0.0125 0.0125 0.0125 0.     0.    ] mean:  0.0075000000000000015\n",
+      "FNR : [0.   0.05 0.05 0.05 0.  ] mean:  0.030000000000000006\n",
+      "NPV : [1.         0.9875     0.9875     0.98765432 1.        ] mean:  0.992530864197531\n",
+      "FDR : [0.04761905 0.05       0.05       0.         0.        ] mean:  0.029523809523809525\n",
+      "f1_score: [0.97560976 0.95       0.95       0.97435897 1.        ] mean:  0.9699937460913072\n"
      ]
     }
    ],
    "source": [
-    "print(\"TNR :\" , TNR)\n",
-    "print(\"TPR :\" , TPR)\n",
-    "print(\"FPR :\" , FPR)\n",
-    "print(\"FNR :\" , FNR)\n",
-    "print(\"ACC :\" , ACC)\n",
-    "print(\"PPV :\" , PPV)\n",
-    "print(\"NPV :\" , NPV)\n",
-    "print(\"FDR :\" , FDR)\n"
+    "print(\"Sensitivity :\" , TPR, 'mean: ', np.mean(TPR))\n",
+    "print(\"Specificity :\" , TNR, 'mean: ', np.mean(TNR))\n",
+    "print(\"Precision :\" , PPV, 'mean: ', np.mean(PPV))\n",
+    "print(\"Accuracy :\" , ACC, 'mean: ', np.mean(ACC))\n",
+    "print(\"FPR :\" , FPR, 'mean: ', np.mean(FPR))\n",
+    "print(\"FNR :\" , FNR, 'mean: ', np.mean(FNR))\n",
+    "print(\"NPV :\" , NPV, 'mean: ', np.mean(NPV))\n",
+    "print(\"FDR :\" , FDR, 'mean: ', np.mean(FDR))\n",
+    "print(\"f1_score:\", 2 * (PPV * TPR) / (PPV + TPR), 'mean: ', np.mean(2 * (PPV * TPR) / (PPV + TPR)))\n"
    ]
   }
  ],
