--- a/Model/LSTM_KFold.ipynb
+++ b/Model/LSTM_KFold.ipynb
@@ -1157,6 +1157,15 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "LSTM Tuning Fold 3 \n",
+    "\n",
+    "LSTM biasa Fold 3"
+   ]
   }
  ],
  "metadata": {
