--- a/Model/RNN_KFold.ipynb
+++ b/Model/RNN_KFold.ipynb
@@ -1146,6 +1146,15 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Non tuning Fold 5\n",
+    "\n",
+    "Tuning Fold 3"
+   ]
   }
  ],
  "metadata": {
